// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A MathML builder \\html@mathml makes clean symbols 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mtext>
      ©
    </mtext>
    <mo mathvariant="normal">
      ≠
    </mo>
  </mrow>
  <mrow>
    <mo mathvariant="normal">
      ∉
    </mo>
  </mrow>
  <mrow>
    <mo mathvariant="normal">
      ≘
    </mo>
  </mrow>
  <mrow>
    <mtext>
      KaTeX
    </mtext>
  </mrow>
</math>

`;

exports[`A MathML builder \\text fonts become mathvariant 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mtext>
      roman
    </mtext>
    <mrow>
      <mtext mathvariant="italic">
        italic
      </mtext>
      <mrow>
        <mtext mathvariant="bold-italic">
          bold
        </mtext>
        <mtext>
           
        </mtext>
        <mtext mathvariant="bold-italic">
          italic
        </mtext>
      </mrow>
    </mrow>
    <mtext mathvariant="bold">
      bold
    </mtext>
    <mrow>
      <mtext mathvariant="sans-serif">
        ss
      </mtext>
      <mrow>
        <mtext mathvariant="sans-serif-italic">
          italic
        </mtext>
        <mrow>
          <mtext mathvariant="sans-serif-bold-italic">
            bold
          </mtext>
          <mtext>
             
          </mtext>
          <mtext mathvariant="sans-serif-bold-italic">
            italic
          </mtext>
        </mrow>
      </mrow>
      <mtext mathvariant="bold-sans-serif">
        bold
      </mtext>
    </mrow>
    <mrow>
      <mtext mathvariant="monospace">
        tt
      </mtext>
      <mrow>
        <mtext mathvariant="monospace">
          italic
        </mtext>
        <mrow>
          <mtext mathvariant="monospace">
            bold
          </mtext>
          <mtext>
             
          </mtext>
          <mtext mathvariant="monospace">
            italic
          </mtext>
        </mrow>
      </mrow>
      <mtext mathvariant="monospace">
        bold
      </mtext>
    </mrow>
  </mrow>
</math>

`;

exports[`A MathML builder accents turn into <mover accent="true"> in MathML 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mover accent="true">
      <mi>
        u
      </mi>
      <mo>
        ¨
      </mo>
    </mover>
    <mi>
      b
    </mi>
    <mi>
      e
    </mi>
    <mi>
      r
    </mi>
    <mi>
      f
    </mi>
    <mi>
      i
    </mi>
    <mi>
      a
    </mi>
    <mi>
      n
    </mi>
    <mi>
      c
    </mi>
    <mover accent="true">
      <mi>
        e
      </mi>
      <mo>
        ˊ
      </mo>
    </mover>
    <mi>
      e
    </mi>
  </mrow>
</math>

`;

exports[`A MathML builder ligatures render properly 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mtext>
      “‘Hi—-”’
    </mtext>
    <mo>
      −
    </mo>
  </mrow>
  <mrow>
    <mo>
      −
    </mo>
  </mrow>
  <mrow>
    <mtext mathvariant="monospace">
      \`\`‘Hi----&#x27;&#x27;’\`\`‘Hi----&#x27;&#x27;’
    </mtext>
  </mrow>
</math>

`;

exports[`A MathML builder normal spaces render normally 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mspace width="1em">
    </mspace>
    <mspace width="0.431em">
    </mspace>
  </mrow>
</math>

`;

exports[`A MathML builder should concatenate digits into single <mn> 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mi>
      sin
    </mi>
    <mo>
      ⁡
    </mo>
    <mi>
      α
    </mi>
    <mo>
      =
    </mo>
  </mrow>
  <mrow>
    <mn>
      0.34
    </mn>
  </mrow>
</math>

`;

exports[`A MathML builder should generate <mphantom> nodes for \\phantom 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mphantom>
      <mi>
        x
      </mi>
    </mphantom>
  </mrow>
</math>

`;

exports[`A MathML builder should generate the right types of nodes 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mi>
      sin
    </mi>
    <mo>
      ⁡
    </mo>
    <mi>
      x
    </mi>
    <mo>
      +
    </mo>
  </mrow>
  <mrow>
    <mn>
      1
    </mn>
    <mtext>
        
    </mtext>
    <mtext>
      a
    </mtext>
  </mrow>
</math>

`;

exports[`A MathML builder should make prime operators into <mo> nodes 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <msup>
      <mi>
        f
      </mi>
      <mo mathvariant="normal"
          lspace="0em"
          rspace="0em"
      >
        ′
      </mo>
    </msup>
  </mrow>
</math>

`;

exports[`A MathML builder should output \\limsup_{x \\rightarrow \\infty} correctly in \\textstyle 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <msub>
      <mo>
        <mi mathvariant="normal">
          lim sup
        </mi>
        <mo>
          ⁡
        </mo>
      </mo>
      <mrow>
        <mi>
          x
        </mi>
        <mo>
          →
        </mo>
        <mi mathvariant="normal">
          ∞
        </mi>
      </mrow>
    </msub>
  </mrow>
</math>

`;

exports[`A MathML builder should output \\limsup_{x \\rightarrow \\infty} in displaymode correctly 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <munder>
      <mo>
        <mi mathvariant="normal">
          lim sup
        </mi>
        <mo>
          ⁡
        </mo>
      </mo>
      <mrow>
        <mi>
          x
        </mi>
        <mo>
          →
        </mo>
        <mi mathvariant="normal">
          ∞
        </mi>
      </mrow>
    </munder>
  </mrow>
</math>

`;

exports[`A MathML builder should render boldsymbol with the correct mathvariants 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mi>
      <mrow>
        <mi mathvariant="bold-italic">
          A
        </mi>
        <mi mathvariant="bold-italic">
          x
        </mi>
        <mn mathvariant="bold-italic">
          2
        </mn>
        <mi mathvariant="bold-italic">
          k
        </mi>
        <mi mathvariant="bold-italic">
          ω
        </mi>
        <mi mathvariant="bold-italic">
          Ω
        </mi>
        <mi mathvariant="bold-italic">
          ı
        </mi>
        <mo mathvariant="bold-italic">
          +
        </mo>
      </mrow>
    </mi>
  </mrow>
</math>

`;

exports[`A MathML builder should render mathchoice as if there was nothing 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mstyle scriptlevel="0"
            displaystyle="true"
    >
      <mrow>
        <munderover>
          <mo>
            ∑
          </mo>
          <mrow>
            <mi>
              k
            </mi>
            <mo>
              =
            </mo>
            <mn>
              0
            </mn>
          </mrow>
          <mi mathvariant="normal">
            ∞
          </mi>
        </munderover>
        <msup>
          <mi>
            x
          </mi>
          <mi>
            k
          </mi>
        </msup>
      </mrow>
    </mstyle>
  </mrow>
</math>

`;

exports[`A MathML builder should render mathchoice as if there was nothing 2`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <msubsup>
      <mo>
        ∑
      </mo>
      <mrow>
        <mi>
          k
        </mi>
        <mo>
          =
        </mo>
        <mn>
          0
        </mn>
      </mrow>
      <mi mathvariant="normal">
        ∞
      </mi>
    </msubsup>
    <msup>
      <mi>
        x
      </mi>
      <mi>
        k
      </mi>
    </msup>
  </mrow>
</math>

`;

exports[`A MathML builder should render mathchoice as if there was nothing 3`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <msub>
      <mi>
        x
      </mi>
      <mi>
        T
      </mi>
    </msub>
  </mrow>
</math>

`;

exports[`A MathML builder should render mathchoice as if there was nothing 4`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <msub>
      <mi>
        x
      </mi>
      <msub>
        <mi>
          y
        </mi>
        <mi>
          T
        </mi>
      </msub>
    </msub>
  </mrow>
</math>

`;

exports[`A MathML builder should set href attribute for href appropriately 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mi href="http://example.org">
      α
    </mi>
  </mrow>
</math>

`;

exports[`A MathML builder should use <menclose> for colorbox 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mpadded width="+6pt"
             height="+6pt"
             lspace="3pt"
             voffset="3pt"
             mathbackground="red"
    >
      <mtext>
        b
      </mtext>
    </mpadded>
  </mrow>
</math>

`;

exports[`A MathML builder should use <mpadded> for raisebox 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mpadded voffset="0.25em">
      <mstyle scriptlevel="0"
              displaystyle="false"
      >
        <mtext>
          b
        </mtext>
      </mstyle>
    </mpadded>
  </mrow>
</math>

`;

exports[`A MathML builder should use <msupsub> for regular operators 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mstyle scriptlevel="0"
            displaystyle="false"
    >
      <msubsup>
        <mo>
          ∑
        </mo>
        <mi>
          a
        </mi>
        <mi>
          b
        </mi>
      </msubsup>
    </mstyle>
  </mrow>
</math>

`;

exports[`A MathML builder should use <munderover> for large operators 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mstyle scriptlevel="0"
            displaystyle="true"
    >
      <munderover>
        <mo>
          ∑
        </mo>
        <mi>
          a
        </mi>
        <mi>
          b
        </mi>
      </munderover>
    </mstyle>
  </mrow>
</math>

`;

exports[`A MathML builder special spaces render specially 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mrow>
    <mtext>
       
    </mtext>
    <mtext>
       
    </mtext>
    <mtext>
       
    </mtext>
    <mtext>
       
    </mtext>
    <mtext>
       
    </mtext>
    <mtext>
        
    </mtext>
    <mtext>
        
    </mtext>
    <mtext>
       ⁣
    </mtext>
    <mtext>
       ⁣
    </mtext>
    <mtext>
       ⁣
    </mtext>
    <mtext>
       ⁣
    </mtext>
    <mtext>
       
    </mtext>
    <mtext>
       
    </mtext>
    <mtext>
       
    </mtext>
    <mtext>
        
    </mtext>
    <mtext>
       ⁣
    </mtext>
    <mtext>
       ⁣
    </mtext>
    <mtext>
       ⁣
    </mtext>
    <mtext>
       ⁣
    </mtext>
  </mrow>
</math>

`;

exports[`A MathML builder tags use <mlabeledtr> 1`] = `

<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mtable width="100%">
    <mtr>
      <mtd width="50%">
      </mtd>
      <mtd>
        <mrow>
          <mi>
            x
          </mi>
          <mo>
            +
          </mo>
          <msup>
            <mi>
              y
            </mi>
            <mn>
              2
            </mn>
          </msup>
        </mrow>
      </mtd>
      <mtd width="50%">
      </mtd>
      <mtd>
        <mtext>
          (hi)
        </mtext>
      </mtd>
    </mtr>
  </mtable>
</math>

`;
